openjdk-21, uzu Saxon por inx-kategorioj, java fork=true